--- a/public/style/style.css
+++ b/public/style/style.css
@@ -6,7 +6,7 @@ html{
 
 body{
 	 margin:auto;
-	 max-width: 1200px;
+	 max-width: 960px;
 	 min-width: 200px;
 
 	 opacity: 1;
@@ -32,16 +32,55 @@ h2{
 
 
 
-
-
-
-
-
-
-.content{
-	margin: 70px 20px 20px 20px;
-	height:100%;
+.menu-div{
+	margin: 20px auto 80px auto;
+	height:80px;
 }
+
+.menu-div h1{
+	float: left;
+	display: inline;
+}
+
+.menu-div ul{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+.menu-div ul li{
+	float: right;
+}
+
+.menu-div ul li a{
+	display: block;
+	color: #5A5A5A;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+.menu-div ul li a:hover{
+	color: #5B8AFD;
+
+}
+
+.menu-div .active{
+    color: #5B8AFD;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .content .intro p{
 	color: #5A5A5A;
@@ -51,28 +90,20 @@ h2{
 }
 
 .content .boxcontainer{
-	margin-top: 20px;
+	 margin-top: 20px;
 	 display: inline-block;
   	 width: 48%;
   	 height:auto;
   	 float: left; 	  	 
 }
 
-.content .chatcontainer{
-	 margin-top: 40px;
-	 display: inline-block;
-  	 width: 98%;
-  	 height:auto;
-  	 float: left; 
-}
-
 
 .content .boxcontainer:nth-child(2){
-	margin-right: 2%
+	margin-right: 4%
 }
 
 .textBox{
-	height: 200px;
+	height: 250px;
 	max-width: 100%;
 	display: block; 
 	padding:20px;
@@ -89,7 +120,6 @@ h2{
 
 .content .chatcontainer .textBox{
 	width: 100%;
-
 }
 
 
@@ -118,86 +148,6 @@ h2{
 
 .hide{
 	visibility: hidden;
-}
-
-
-
-
-.chatcontainer .chatbox{
-	height: 100px;
-	display: block; 
-	resize: none;
-	width:100%;
-
-	font-size: 16px;
-	font-family: 'Inconsolata', monospace;
-	color: #5A5A5A;
-}
-
-.chatcontainer .chatbox .chat-object{
-	height: auto;
-	max-width: 100%;
-	display: block; 
-	resize: none;
-	border: none;
-	width:100%;
-}
-
-
-
-
-
-.chatcontainer .chatbox .chat-object .left{
-	height: 50%;
-	max-width: 50%;
-	display: block; 
-	width:50%;
-	float:left;
-	clear:right;
-	margin-bottom: 20px;
-}
-
-.chatcontainer .chatbox .chat-object .right{
-
-	height: 50%;
-	max-width: 50%;
-	display: block; 
-	width:50%;
-	float:right;
-	clear:left;
-	margin-bottom: 20px;
-
-}
-
-
-
-.chatcontainer .chatbox .chat-object .left .msg{
-
-	height: 100%;
-	max-width: 100%;
-	display: block; 
-	width:100%;
-	padding:20px;
-
-	font-size: 16px;
-	font-family: 'Inconsolata', monospace;
-	color: #5A5A5A;
-	background-color: #F2F2F2;
-}
-
-.chatcontainer .chatbox .chat-object .right .msg{
-
-	height: 100%;
-	max-width: 100%;
-	display: block; 
-	width:100%;
-	padding:20px;
-	
-
-	font-size: 16px;
-	font-family: 'Inconsolata', monospace;
-	color: #5A5A5A;
-	background-color: #F2F2F2;
 }
 
 #first{
