--- a/public/style/stylechat.css
+++ b/public/style/stylechat.css
@@ -1,16 +1,16 @@
 html{
 	font-size: 16px;
 	font-family: 'Inconsolata', monospace;
-	height: 100%;
-	max-height: 100%;
+	height: 100vh;
+	max-height: 100vh;
 }
 
 body{
 	 margin:auto;
 	 max-width: 960px;
 	 min-width: 200px;
-	 height: 100%;
-	 max-height: 100%;
+	 height: 100vh;
+	 max-height: 100vh;
 
 	 opacity: 1;
      transition: 1s opacity;
@@ -50,7 +50,7 @@ h3{
 
 .menu-div{
 	margin: 20px auto auto auto;
-	height:80px;
+	height:8vh;
 	max-width: 100%;
 }
 
@@ -94,8 +94,8 @@ h3{
 
 .content{
 	margin: auto;
-	height: 100%;
-	max-height: 100%;
+	height:92vh;
+	max-height: 92vh;
 	max-width: 750px;
 }
 
@@ -104,7 +104,7 @@ h3{
 	 margin: auto;
 	 display: inline-block;
   	 width: 100%;
-  	 height:auto;
+  	 height:50vh;
   	 float: left; 
   	 margin-bottom: 20px;
   	 border-top: 1px 
@@ -112,14 +112,15 @@ h3{
 
 .content .chatcontainer .chatbox{
   	 width: 100%;
-  	 height:320px;
+  	 height:90%;
+  	 max-height: 90%;
+  	 overflow-y: auto;
   	 float: left; 
   	 display: table;
 
   	border-top: 1px;
     border-top-color: #b3b3b3;
     border-top-style: solid;
-    overflow: hidden;
 }
 
 .chatcontainer .chatbox .chat-object{
@@ -151,9 +152,13 @@ h3{
 	clear:left;
 }
 .chatcontainer .chatbox .msgWrapper{
-	 display: table-cell;
+	display: table-cell;
     vertical-align: bottom;
     padding: 5px;
+    height: 100%;
+
+    overflow-y:scroll;
+    overflow-x:hidden;
 
 }
 
@@ -185,13 +190,13 @@ h3{
 	 margin: auto;
 	 display: inline-block;
   	 width: 100%;
-  	 height:auto;
+  	 height:40vh;
   	 float: left; 
 }
 
 .content .boxcontainer .textBox{
 
-	height: 80px;
+	height: 40px;
 	max-width: 100%;
 	display: block; 
 	resize: none;
