fixed small bugs such as meta tag, and the enter bug

--- a/public/style/stylechat.css
+++ b/public/style/stylechat.css
@@ -171,7 +171,7 @@ h3{
 	width:100%;
 	padding:12px 0px 12px 12px;
 	
-
+	white-space: pre;
 	font-size: 16px;
 	font-family: 'Inconsolata', monospace;
 	color: #5A5A5A;
