--- a/public/style/stylechat.css
+++ b/public/style/stylechat.css
@@ -172,6 +172,7 @@ h3{
 	padding:12px 0px 12px 12px;
 	
 	white-space: pre;
+	word-wrap: break-word;
 	font-size: 16px;
 	font-family: 'Inconsolata', monospace;
 	color: #5A5A5A;
