--- a/public/style/style.css
+++ b/public/style/style.css
@@ -118,6 +118,7 @@ h2{
 	background-color: #F2F2F2;
 	white-space: pre-line;
 	word-wrap: break-word;
+	text-indent: 0;
 }
 
 .content .chatcontainer .textBox{
