--- a/DBL_Nordic_CHI/public/style/syle.css
+++ b/DBL_Nordic_CHI/public/style/syle.css
@@ -13,12 +13,22 @@ html, body{
 	max-width: 100%;
     overflow: hidden;
 }
-
-.content{
-	margin:125px auto 125px auto;
-	max-width: 1200px
+.intro-screen{
+	height:100vh;
+	margin:0px auto 0px auto;
+	max-width: 1200px;
+	text-align: center;
 }
 
+.intro-screen h2{
+	margin: auto;
+}
+.content{
+	min-height: 80vh;
+	margin:125px auto 125px auto;
+	max-width: 1200px;
+	display:none;
+}
 .logo-text{
 	position: fixed;
 	z-index: 1;
@@ -34,7 +44,7 @@ html, body{
 }
 
 .conversation-style{
-	display: block !important;
+	display: none;
 	font-family: Charter;
 	font-size: 50.5px;
 	line-height: 64px;
@@ -85,6 +95,10 @@ html, body{
 	margin:50px 0px -25px 0px;
 }
 
+#question{
+	display: inline-block;
+}
+
 .text-processer .meta-text{
 	font-family: Avenir;
 	font-size: 16px;
@@ -120,14 +134,14 @@ html, body{
 
 .text-processer .input-div .indication{
 	position: absolute;
-    padding-top: 150px;
+    padding-top: 132px;
     display: inline-block;
     margin-left: -212px;
     color: #b7b7b7;
     opacity: 0;
 }
 
-.text-processer .hidden{
+.hidden{
 	visibility: hidden;
 }
 
